convert-macros/tests/ui/invalid-encoding.stderr
error: encoding needs to be specified

         = try: `#[encoding(Json)]`
 --> tests/ui/invalid-encoding.rs:3:10
  |
3 | #[derive(ToBytes)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `ToBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected attribute arguments in parentheses: #[encoding(...)]

         = note: expects a path
         = try: `#[encoding(Json)]`
 --> tests/ui/invalid-encoding.rs:7:3
  |
7 | #[encoding]
  |   ^^^^^^^^

error: expected parentheses: #[encoding(...)]

         = note: expects a path
         = try: `#[encoding(Json)]`
  --> tests/ui/invalid-encoding.rs:11:12
   |
11 | #[encoding = "string"]
   |            ^

error: unexpected token

         = note: expects a path
         = try: `#[encoding(Json)]`
  --> tests/ui/invalid-encoding.rs:15:21
   |
15 | #[encoding(something, else)]
   |                     ^

error: only one encoding can be specified

         = try: remove `#[encoding(Encodings)]`
  --> tests/ui/invalid-encoding.rs:20:1
   |
20 | #[encoding(Encodings)]
   | ^^^^^^^^^^^^^^^^^^^^^^
